--- a/app/src/main/res/drawable-anydpi/ic_action_direction.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_direction.xml
@@ -3,12 +3,12 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@android:color/black"
+    android:tint="#67F3FF"
     android:alpha="0.8">
-  <group android:scaleX="1"
-      android:scaleY="1"
-      android:translateX="0"
-      android:translateY="0">
+  <group android:scaleX="1.5"
+      android:scaleY="1.5"
+      android:translateX="-6"
+      android:translateY="-6">
     <path
         android:fillColor="@android:color/white"
         android:pathData="M21.71,11.29l-9,-9c-0.39,-0.39 -1.02,-0.39 -1.41,0l-9,9c-0.39,0.39 -0.39,1.02 0,1.41l9,9c0.39,0.39 1.02,0.39 1.41,0l9,-9c0.39,-0.38 0.39,-1.01 0,-1.41zM14,14.5V12h-4v3H8v-4c0,-0.55 0.45,-1 1,-1h5V7.5l3.5,3.5 -3.5,3.5z"/>
