--- a/app/src/main/res/layout/layout_featured_item.xml
+++ b/app/src/main/res/layout/layout_featured_item.xml
@@ -2,6 +2,8 @@
 <com.selvakumarsm.elasticmodule2.ElasticView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/featuredRoot"
+    android:elevation="5dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:collapsedSceneId="@+id/start"
@@ -22,14 +24,13 @@
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
-        android:text="Top 7 Places to go for Breakfast Buffet"
+        android:textColor="?android:attr/textColorPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/tvPlaces"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="6 places"
         android:textSize="12sp" />
 
     <TextView
@@ -37,7 +38,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="23K views"
         android:textSize="12sp" />
 
 
@@ -48,7 +48,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:lineHeight="20sp"
-        android:text="7 Places to go for Breakfast Buffet in Hyderabad. Best breakfast buffet restaurants in Hyderabad offering Western breakfast, North Indian breakfast and South Indian breakfast."
         android:textAlignment="center"
         android:textSize="14sp" />
 
